--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -13,12 +13,14 @@ jobs:
     strategy:
       matrix:
         features:
-          - color
-          - hello
+          - miniforge
+          - rye
+          - zsh-common
         baseImage:
           - debian:latest
           - ubuntu:latest
           - mcr.microsoft.com/devcontainers/base:ubuntu
+          - mcr.microsoft.com/devcontainers/base:debian
     steps:
       - uses: actions/checkout@v4
 
@@ -34,8 +36,9 @@ jobs:
     strategy:
       matrix:
         features:
-          - color
-          - hello
+          - miniforge
+          - rye
+          - zsh-common
     steps:
       - uses: actions/checkout@v4
 
