--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -17,8 +17,7 @@ jobs:
           - rye
           - zsh-common
         baseImage:
-          - debian:latest
-          - ubuntu:latest
+          - mcr.microsoft.com/devcontainers/base:alpine-3.20
           - mcr.microsoft.com/devcontainers/base:ubuntu
           - mcr.microsoft.com/devcontainers/base:debian
     steps:
