--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -42,6 +42,14 @@ jobs:
           git commit -m 'Automated documentation update [skip ci]' || export NO_UPDATES=true
           # Push
           if [ "$NO_UPDATES" != "true" ] ; then
-              git push origin "$branch"
-              gh pr create --title "$message" --body "$message"
+              git push origin "$branch" || export NO_UPDATES=true
           fi
+          # Create PR
+          if [ "$NO_UPDATES" != "true" ] ; then
+              gh pr create --title "$message" --body "$message" || export NO_UPDATES=true
+          fi
+          # Log if no updates
+          if [ "$NO_UPDATES" == "true" ] ; then
+              echo "No updates to push."
+          fi
+          echo "End."
