--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -16,6 +16,7 @@ jobs:
           - miniforge
           - rye
           - uv
+          - poetry
           - zsh-common
         baseImage:
           - mcr.microsoft.com/devcontainers/base:ubuntu
@@ -38,6 +39,7 @@ jobs:
           - miniforge
           - rye
           - uv
+          - poetry
           - zsh-common
     steps:
       - uses: actions/checkout@v4
