feat: Add support for editors in test workflow

--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -13,6 +13,7 @@ jobs:
     strategy:
       matrix:
         features:
+          - editors
           - miniforge
           - rye
           - uv
@@ -37,6 +38,7 @@ jobs:
     strategy:
       matrix:
         features:
+          - editors
           - miniforge
           - rye
           - uv
