fix: Update default value for accept_suggest_key in devcontainer-feature.json

--- a/src/zsh-common/devcontainer-feature.json
+++ b/src/zsh-common/devcontainer-feature.json
@@ -26,7 +26,7 @@
         },
         "accept_suggest_key": {
             "type": "string",
-            "default": "^ ",
+            "default": "",
             "description": "Accept the suggestion to bind the suggestion key"
         }
     },
